--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
   },
   "homepage": "https://github.com/vektornsk/node#readme",
   "devDependencies": {
-    "jest": "^28.1.3"
+    "jest": "28.1.3"
   }
 }
